--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#B2DFEE</color>
+    <color name="colorPrimaryDark">#000</color>
+    <color name="colorAccent">#AEEEEE</color>
+    <color name="tv_title">#242424</color>
+    <color name="tv_reported">#404040</color>
+    <color name="line_color">#E8E8E8</color>
+    <color name="main_text_color">#878787</color>
+    <color name="tv_hint">#AAAAAA</color>
+    <color name="tv_music_info">#EAEAEA</color>
+    <color name="radio_cover_color">#75000000</color>
+    <color name="transparent">#b5000000</color>
+    <color name="bottom_color">#FAFAFA</color>
+    <color name="app_bar_color">#00FFFFFF</color>
+    <color name="red">#4B0082</color>
 </resources>
