--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,61 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="ToolbarPopupTheme" parent="@style/ThemeOverlay.AppCompat.Dark">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:colorBackground">@android:color/black</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="overlapAnchor">false</item>
+    </style>
+
+    <style name="main_tv">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/dp_14_x</item>
+        <item name="android:gravity">center_vertical|left</item>
+        <item name="android:textColor">@color/main_text_color</item>
+    </style>
+    <style name="main_btn">
+        <item name="android:layout_width">@dimen/dp_48_y</item>
+        <item name="android:layout_height">@dimen/dp_32_y</item>
+        <item name="android:textSize">@dimen/dp_13_x</item>
+        <item name="android:textColor">@color/main_text_color</item>
+        <item name="android:layout_centerVertical">true</item>
+        <!--<item name="android:background">@drawable/main_btn</item>-->
+    </style>
+    <style name="tv_title">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/dp_20_x</item>
+        <item name="android:gravity">center_vertical|left</item>
+        <item name="android:textColor">@color/tv_title</item>
+    </style>
+
+    <style name="main_rb">
+        <item name="android:button">@null</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:drawablePadding">-16dp</item>
+    </style>
+
+    <style name="view_line">
+        <item name="android:layout_height">2px</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/line_color</item>
+    </style>
+
+    <style name="view_black">
+        <item name="android:layout_height">@dimen/dp_4_y</item>
+        <item name="android:layout_width">@dimen/dp_64_x</item>
+        <item name="android:background">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="TextAppearance.ExpandedTitle"
+        parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textSize">@dimen/dp_20_x</item>
+    </style>
 </resources>
