--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.komori.yixi.main.MainActivity">
 
     <include
@@ -15,5 +16,6 @@
         android:layout_height="match_parent"
         android:background="@color/tv_hint"
         android:layout_below="@id/tab_title" />
+
 
 </RelativeLayout>
