--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -1,24 +1,11 @@
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:orientation="vertical"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:gravity="center"
-  >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-  <TextView
-    android:id="@+id/item_subtitle"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Page:"
-    android:textAppearance="?android:attr/textAppearanceLarge"
-    />
+  <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:scaleType="fitXY"
+      android:src="@mipmap/record_title" />
 
-  <TextView
-    android:id="@+id/item_title"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textSize="80sp"
-    />
-
-</LinearLayout>
+</RelativeLayout>
