--- a/app/src/main/res/layout/fragment_speech.xml
+++ b/app/src/main/res/layout/fragment_speech.xml
@@ -1,6 +1,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nsv_scroller"
@@ -21,13 +23,20 @@
                 android:scaleType="fitXY"
                 android:src="@mipmap/speech_title" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view"
+            <com.scwang.smartrefresh.layout.SmartRefreshLayout
+                android:id="@+id/refresh_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/iv_head" />
+                android:layout_below="@+id/iv_head">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:overScrollMode="never" />
+            </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
 
-    >
 </android.support.design.widget.CoordinatorLayout>
